# wsascha.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  Gemfile  LICENSE  README.md  _config.yml  about.md  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml
_data/index/: careers.yml  education.yml
_includes/sections/: about.html  career.html  education.html
_posts/: 2017-12-31-hello-world.md  2017-12-31-welcome-to-jekyll.markdown  2018-01-06-hello-world.md
_sass/: base.scss
about/: index.html
assets/_data/index/: skills.yml
assets/javascripts/: bundle.c8d2eff1.min.js
docs/: about.md  index.md
docs/stylesheets/: extra.css
search/: search_index.json
