[tool.poetry]
name = "wsascha-github-io"
version = "0.1.0"
description = "My personal web site."
authors = ["Sascha W. <sasw@posteo.de>"]
license = "All rights reserved"
readme = "README.md"
packages = [{include = "wsascha"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-git-authors-plugin = "^0.8.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
mkdocs-material = {extras = ["imaging"], version = "^9.5.13"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
